--- a/luggage/ViewController/ZZYFootprintVC.xib
+++ b/luggage/ViewController/ZZYFootprintVC.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
@@ -20,16 +21,16 @@
                         <constraint firstAttribute="height" constant="44" id="VFK-Cd-eli"/>
                     </constraints>
                     <items>
-                        <navigationItem title="足迹" id="B37-1E-ncj">
+                        <navigationItem title="Footprint" id="B37-1E-ncj">
                             <barButtonItem key="leftBarButtonItem" id="9SE-Ck-vtZ">
                                 <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" id="SO5-Sk-BGI">
                                     <rect key="frame" x="20" y="7" width="40" height="30"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <state key="normal">
                                         <attributedString key="attributedTitle">
-                                            <fragment content="返回">
+                                            <fragment content="Back">
                                                 <attributes>
-                                                    <font key="NSFont" size="15" name="STHeitiSC-Light"/>
+                                                    <font key="NSFont" size="15" name="HelveticaNeue-Light"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
                                                 </attributes>
                                             </fragment>
