--- a/luggage/ViewController/ZZYLocateVC.xib
+++ b/luggage/ViewController/ZZYLocateVC.xib
@@ -27,7 +27,7 @@
                                     <rect key="frame" x="20" y="7" width="44" height="30"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
-                                    <state key="normal" title="返回"/>
+                                    <state key="normal" title="Back"/>
                                     <connections>
                                         <action selector="onBackButton:" destination="-1" eventType="touchUpInside" id="CrL-em-aQS"/>
                                     </connections>
