--- a/luggage/ViewController/ZZYSMSLoginVerifyVC.xib
+++ b/luggage/ViewController/ZZYSMSLoginVerifyVC.xib
@@ -47,7 +47,7 @@
                         <constraint firstAttribute="height" constant="44" id="Aj2-0Q-CSt"/>
                         <constraint firstAttribute="width" constant="44" id="BCf-M3-vKT"/>
                     </constraints>
-                    <state key="normal" title="返回">
+                    <state key="normal" title="Back">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
