--- a/luggage/ViewController/ZZYWebsiteVC.xib
+++ b/luggage/ViewController/ZZYWebsiteVC.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
@@ -21,17 +22,16 @@
                         <constraint firstAttribute="height" constant="44" id="BBR-Fv-tQU"/>
                     </constraints>
                     <items>
-                        <navigationItem title="新品上市" id="cgQ-9T-XBS">
+                        <navigationItem title="Products" id="cgQ-9T-XBS">
                             <barButtonItem key="leftBarButtonItem" id="SN2-hI-SKy">
                                 <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" id="qhV-5c-Vrh">
                                     <rect key="frame" x="20" y="5" width="40" height="33"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <state key="normal">
                                         <attributedString key="attributedTitle">
-                                            <fragment content="返回">
+                                            <fragment content="Back">
                                                 <attributes>
-                                                    <font key="NSFont" size="15" name="STHeitiSC-Light"/>
-                                                    <font key="NSOriginalFont" size="15" name="HelveticaNeue"/>
+                                                    <font key="NSFont" size="15" name="HelveticaNeue"/>
                                                     <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
                                                 </attributes>
                                             </fragment>
